--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:6000",
+  "proxy": "https://tucake2000.herokuapp.com",
   "devDependencies": {
     "react-alice-carousel": "^2.6.4"
   }
