--- a/package.json
+++ b/package.json
@@ -67,6 +67,5 @@
   "devDependencies": {
     "react-alice-carousel": "^2.6.4"
   },
-  "proxy": "https://tucake2000.herokuapp.com",
-  "backendApiBaseUrl": "https://tucake2000.herokuapp.com"
+  "proxy": "https://tucake2000.herokuapp.com"
 }
