--- a/package.json
+++ b/package.json
@@ -67,5 +67,6 @@
   },
   "devDependencies": {
     "react-alice-carousel": "^2.6.4"
-  }
+  },
+  "proxy": "https://server-shopcake-tramtu-trantu2000.vercel.app/api/v1"
 }
